--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -44,14 +44,27 @@
         app:layout_constraintTop_toBottomOf="@+id/author_input2" />
 
     <Button
-        android:id="@+id/update_button"
+    android:id="@+id/update_button"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:layout_marginTop="40dp"
+    android:text="Update"
+    android:textSize="20sp"
+    android:textAllCaps="false"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/pages_input2" />
+
+    <Button
+        android:id="@+id/delete_button"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="40dp"
-        android:text="Update"
+        android:layout_marginTop="16dp"
+        android:text="Delete"
+        android:textColor="@color/red"
         android:textSize="20sp"
         android:textAllCaps="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pages_input2" />
+        app:layout_constraintTop_toBottomOf="@id/update_button"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
